--- a/resources.html
+++ b/resources.html
@@ -66,133 +66,129 @@ Once you get more serious about machine learning, you might need some basic math
 -->
 
 <h3><p> <strong>Online courses </strong></p> </h3>
-
 Deep learning:
-<br>
-- <a href="https://stats385.github.io/">Theories of Deep Learning</a>
-[<a href="https://www.researchgate.net/project/Theories-of-Deep-Learning">lectures</a>],  
-Hatef Monajemi, et al., Stanford University 
-<br>
-- <a href="http://cs231n.stanford.edu/">ConvNet for visual recognition</a>, 
-Fei-Fei Li, et al., Stanford University 
-<br>
-- <a href="https://www.youtube.com/playlist?list=PLE6Wd9FR--EfW8dtjAuPoTuPcqmOV53Fu">Deep Learning</a>,  
-Nando de Freitas, Oxford University
-<br>
-- <a href="http://info.usherbrooke.ca/hlarochelle/cours/ift725_A2013/contenu.html">Intro to neural nets</a>, 
-Hugo Larochelle, Université de Sherbrooke
-<br> 
-
+<ul>
+    <li>
+        <a href="https://stats385.github.io/">Theories of Deep Learning</a>
+        [<a href="https://www.researchgate.net/project/Theories-of-Deep-Learning">lectures</a>],  
+        Hatef Monajemi, et al., Stanford University 
+    </li>
+    <li>
+        <a href="http://cs231n.stanford.edu/">ConvNet for visual recognition</a>, 
+        Fei-Fei Li, et al., Stanford University
+    </li>
+    <li>
+        <a href="https://www.youtube.com/playlist?list=PLE6Wd9FR--EfW8dtjAuPoTuPcqmOV53Fu">Deep Learning</a>,  
+        Nando de Freitas, Oxford University 
+    </li>
+    <li>
+        <a href="http://info.usherbrooke.ca/hlarochelle/cours/ift725_A2013/contenu.html">Intro to neural nets</a>, 
+        Hugo Larochelle, Université de Sherbrooke
+    </li>
+</ul>
 Deep reinforcement learning: 
-<br>
-- <a href="http://www0.cs.ucl.ac.uk/staff/D.Silver/web/Teaching.html">Reinforcement Learning</a>, 
-David Silver, University College London
-<br>
-- <a href="http://rll.berkeley.edu/deeprlcourse/?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=revue">Deep Reinforcement Learning</a>, 
-Sergey Levine, UC Berkeley
-<br>
-- <a href="https://www.deepbootcamp.io/">Deep RL Bootcamp</a>, 
-[<a href="https://sites.google.com/view/deep-rl-bootcamp/lectures">lectures</a>,
-<a href="https://sites.google.com/view/deep-rl-bootcamp/labs">labs</a>],
-UC Berkeley
-<br>
-
+<ul>
+    <li>
+        <a href="http://www0.cs.ucl.ac.uk/staff/D.Silver/web/Teaching.html">Reinforcement Learning</a>, 
+        David Silver, University College London
+    </li>
+    <li>
+        <a href="http://rll.berkeley.edu/deeprlcourse/?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=revue">Deep Reinforcement Learning</a>, 
+        Sergey Levine, UC Berkeley    
+    </li>
+    <li>
+        <a href="https://www.deepbootcamp.io/">Deep RL Bootcamp</a>, 
+        [<a href="https://sites.google.com/view/deep-rl-bootcamp/lectures">lectures</a>,
+        <a href="https://sites.google.com/view/deep-rl-bootcamp/labs">labs</a>],
+        UC Berkeley
+    </li>
+</ul>
 Fundations: 
-<br>
-- <a href="http://www.cs.cmu.edu/~ninamf/courses/601sp15/lectures.shtml">Intro to Machine Learning</a>, 
-Tom Mitchell, CMU
-<br>
-- <a href="http://www.mit.edu/~9.520/fall17/">Statistical Learning Theory and Applications</a> 
-[<a href="https://www.youtube.com/watch?v=Q5itLKscYTA&list=PLyGKBDfnk-iCXhuP9W-BQ9q2RkEIA5I5f">lectures</a>], 
-Tomaso Poggio, et al., MIT
-<br>
-- <a href="http://www.stat.cmu.edu/~ryantibs/statml/">Statistical Machine Learning</a>, 
-Ryan Tibshirani, Larry Wasserman, CMU
-<br>
-- <a href="http://hunch.net/~mltf/">Machine Learning the Future</a>, 
-Cornell Tech and Cornell
-<br>
-
-
-
-
-<br><br>
+<ul>
+    <li>
+        <a href="http://www.cs.cmu.edu/~ninamf/courses/601sp15/lectures.shtml">Intro to Machine Learning</a>, 
+        Tom Mitchell, CMU
+    </li>
+    <li>
+        <a href="http://www.mit.edu/~9.520/fall17/">Statistical Learning Theory and Applications</a> 
+        [<a href="https://www.youtube.com/watch?v=Q5itLKscYTA&list=PLyGKBDfnk-iCXhuP9W-BQ9q2RkEIA5I5f">lectures</a>], 
+        Tomaso Poggio, et al., MIT    
+    </li>
+    <li>
+        <a href="http://www.stat.cmu.edu/~ryantibs/statml/">Statistical Machine Learning</a>, 
+        Ryan Tibshirani, Larry Wasserman, CMU
+    </li>
+    <li>
+        <a href="http://hunch.net/~mltf/">Machine Learning the Future</a>, 
+        Cornell Tech and Cornell
+    </li>
+</ul>
 
 
 <h3><p> <strong>Books</strong></p> </h3>
-
-<a href="https://web.stanford.edu/group/pdplab/pdphandbook/">The PDP handbook</a>, Jay McClelland
-<br>
-
-<a href = "https://grey.colorado.edu/CompCogNeuro/index.php/CCNBook/Main">Computational cognitive neuroscience</a>, Randall O'Reilly
-<br>
-
-<a href="http://www.deeplearningbook.org/">Deep learning</a>, 
-[<a href="https://www.youtube.com/channel/UCF9O8Vj-FEbRDA5DcDGz-Pg/videos">videos</a>], 
-Ian Goodfellow, Yoshua Bengio and Aaron Courville
-<br>
-
-<a href="http://ufal.mff.cuni.cz/~straka/courses/npfl114/2016/sutton-bookdraft2016sep.pdf">Intro to reinforcement learning</a>, Richard Sutton and Andrew Barto
-<br>
-
-<a href="http://probmods.org/">Probabilistic Models of Cognition</a>, Noah D. Goodman & Joshua B. Tenenbaum
-
-
-<br><br>
-
+<ul>
+    <li><a href="https://web.stanford.edu/group/pdplab/pdphandbook/">The PDP handbook</a>, Jay McClelland
+    </li>
+    <li><a href = "https://grey.colorado.edu/CompCogNeuro/index.php/CCNBook/Main">Computational cognitive neuroscience</a>, Randall O'Reilly
+    </li>
+    <li><a href="http://www.deeplearningbook.org/">Deep learning</a>, 
+        [<a href="https://www.youtube.com/channel/UCF9O8Vj-FEbRDA5DcDGz-Pg/videos">videos</a>], 
+        Ian Goodfellow, Yoshua Bengio and Aaron Courville
+    </li>
+    <li><a href="http://ufal.mff.cuni.cz/~straka/courses/npfl114/2016/sutton-bookdraft2016sep.pdf">Intro to reinforcement learning</a>, Richard Sutton and Andrew Barto
+    </li>    
+    <li><a href="http://probmods.org/">Probabilistic Models of Cognition</a>, Noah D. Goodman & Joshua B. Tenenbaum
+    </li>        
+</ul>
 
 
 <h3><p> <strong>Other resources </strong></p> </h3>
-
-
-Readings:  
-<br>
-- Deep learning: 
-<a href="https://github.com/dennybritz/deeplearning-papernotes">recent papers</a>, 
-<a href="https://github.com/ChristosChristofidis/awesome-deep-learning">useful repos</a>, 
-<a href="https://github.com/muupan/deep-reinforcement-learning-papers">deep RL</a>
-
-<br>
-- Bayesian: 
-<a href="https://cocosci.berkeley.edu/tom/bayes.html">Bayesian methods</a>,  
-<a href="http://stat.columbia.edu/~porbanz/npb-tutorial.html">Bayesian Nonparametrics</a>
-
-<br>
-- Other stuff: 
-<a href="https://sccn.ucsd.edu/wiki/EEGLAB#The_EEGLAB_Tutorial_Outline">The EEGLAB Tutorial</a>, 
-<a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>
-
-<br>
-- Blogs: 
-<a href="https://nikokriegeskorte.org/">Niko Kriegeskorte</a>,
-<a href="http://distill.pub/">Distill</a>,
-<a href="http://colah.github.io/">Christopher Olah</a>,
-<a href="http://karpathy.github.io/">Andrej Karpathy</a>, 
-<a href="http://blog.shakirm.com/about-me/">Shakir Mohamed</a>
-<br>
-
-
-<br><br>
+<ul>
+    <li>Deep learning: 
+        <a href="https://github.com/dennybritz/deeplearning-papernotes">recent papers</a>, 
+        <a href="https://github.com/ChristosChristofidis/awesome-deep-learning">useful repos</a>, 
+        <a href="https://github.com/muupan/deep-reinforcement-learning-papers">deep RL</a>
+    </li>
+    <li>Bayesian: 
+        <a href="https://cocosci.berkeley.edu/tom/bayes.html">Bayesian methods</a>,  
+        <a href="http://stat.columbia.edu/~porbanz/npb-tutorial.html">Bayesian Nonparametrics</a>
+    </li>
+    <li>Other stuff: 
+        <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>    
+        <a href="https://sccn.ucsd.edu/wiki/EEGLAB#The_EEGLAB_Tutorial_Outline">The EEGLAB Tutorial</a>, 
+    </li>        
+    <li>Blogs: 
+        <a href="https://nikokriegeskorte.org/">Niko Kriegeskorte</a>,
+        <a href="http://distill.pub/">Distill</a>,
+        <a href="http://colah.github.io/">Christopher Olah</a>,
+        <a href="http://karpathy.github.io/">Andrej Karpathy</a>
+    </li>
+</ul>
 
 
 <h3><p> <strong>Frameworks </strong></p> </h3>
-<a href="https://www.tensorflow.org/">Tensorflow</a>: a reverse mode auto-differentiation library in Python
-<br>
-- <a href="https://keras.io/">Keras</a>: a high level API built on top of Tensorflow. 
-<br>
-- <a href="http://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false">Neural Network Playground</a>: Play with a feed-forward network! 
-<br>
-- <a href = "https://github.com/tensorflow/models">Model Zoo</a>: Neural networks implemented in TensorFlow
-<br>
-- <a href="http://web.stanford.edu/class/cs20si/syllabus.html">Tensorflow for Deep Learning Research</a>: a course at Stanford 
-<br>
-<a href="https://gym.openai.com/">OpenAI Gym</a>: simulated environment for training RL agents
-<br>
-<a href = "http://web.stanford.edu/group/mbc/LENSManual/">LENS</a>: the light, efficient network simulator.
-<br>
-<a href = "https://grey.colorado.edu/emergent/index.php/Main_Page">emergent</a>: a comprehensive neural network simulator.
-<br>
-<a href="http://brainiak.org/">BrainIAK</a>: Brain Imaging Analysis Kit
+<ul>
+    <li><a href="https://www.tensorflow.org/">Tensorflow</a>: a reverse mode auto-differentiation library in Python
+        <ul>
+        <li><a href="http://web.stanford.edu/class/cs20si/syllabus.html">Tensorflow for Deep Learning Research</a>: a course at Stanford 
+        </li>        
+        <li><a href="https://keras.io/">Keras</a>: a high level API built on top of Tensorflow. 
+        </li>
+        <li><a href = "https://github.com/tensorflow/models">Model Zoo</a>: Neural networks implemented in TensorFlow
+        </li>        
+        <li><a href="http://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false">Neural Network Playground</a>: Play with a feed-forward network! 
+        </li>
+        </ul>
+    </li>
+    <li><a href = "https://grey.colorado.edu/emergent/index.php/Main_Page">emergent</a>: a comprehensive neural network simulator.
+    </li>    
+    <li><a href = "http://web.stanford.edu/group/mbc/LENSManual/">LENS</a>: the light, efficient network simulator.
+    </li>
+    <li><a href="https://gym.openai.com/">OpenAI Gym</a>: simulated environment for training RL agents
+    </li>        
+    <li><a href="http://brainiak.org/">BrainIAK</a>: Brain Imaging Analysis Kit
+    </li>    
+</ul>
 
 
       </section>
