--- a/resources.html
+++ b/resources.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-<!-- <link rel="shortcut icon" href="https://www.cs.wisc.edu/sites/all/themes/cs_subtheme/favicon.ico" type="image/vnd.microsoft.icon" /> -->
-<link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
     
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -15,7 +13,6 @@
 
   ga('create', 'UA-83024954-2', 'auto');
   ga('send', 'pageview');
-
 </script>
     
     <title>Qihong Lu | Resources </title>
@@ -154,7 +151,7 @@ Fundations:
         <a href="http://stat.columbia.edu/~porbanz/npb-tutorial.html">Bayesian Nonparametrics</a>
     </li>
     <li>Other stuff: 
-        <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>    
+        <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, 
         <a href="https://sccn.ucsd.edu/wiki/EEGLAB#The_EEGLAB_Tutorial_Outline">The EEGLAB Tutorial</a>, 
     </li>        
     <li>Blogs: 
@@ -168,8 +165,14 @@ Fundations:
 
 <h3><p> <strong>Frameworks </strong></p> </h3>
 <ul>
-    <li><a href="https://www.tensorflow.org/">Tensorflow</a>: a reverse mode auto-differentiation library in Python
-        <ul>
+    <li><a href="http://brainiak.org/">BrainIAK</a>: Brain Imaging Analysis Kit
+    </li>    
+    <li><a href="https://gym.openai.com/">OpenAI Gym</a>
+    </li>        
+    <li><a href="http://pytorch.org/">PyTorch</a>
+    </li>
+    <li><a href="https://www.tensorflow.org/">Tensorflow</a>
+    <ul>
         <li><a href="http://web.stanford.edu/class/cs20si/syllabus.html">Tensorflow for Deep Learning Research</a>: a course at Stanford 
         </li>        
         <li><a href="https://keras.io/">Keras</a>: a high level API built on top of Tensorflow. 
@@ -178,16 +181,7 @@ Fundations:
         </li>        
         <li><a href="http://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false">Neural Network Playground</a>: Play with a feed-forward network! 
         </li>
-        </ul>
-    </li>
-    <li><a href = "https://grey.colorado.edu/emergent/index.php/Main_Page">emergent</a>: a comprehensive neural network simulator.
-    </li>    
-    <li><a href = "http://web.stanford.edu/group/mbc/LENSManual/">LENS</a>: the light, efficient network simulator.
-    </li>
-    <li><a href="https://gym.openai.com/">OpenAI Gym</a>: simulated environment for training RL agents
-    </li>        
-    <li><a href="http://brainiak.org/">BrainIAK</a>: Brain Imaging Analysis Kit
-    </li>    
+    </ul>
 </ul>
 
 
