--- a/resources.html
+++ b/resources.html
@@ -177,10 +177,15 @@ Fundations:
         </li>        
         <li><a href="https://keras.io/">Keras</a>: a high level API built on top of Tensorflow. 
         </li>
-        <li><a href = "https://github.com/tensorflow/models">Model Zoo</a>: Neural networks implemented in TensorFlow
-        </li>        
         <li><a href="http://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false">Neural Network Playground</a>: Play with a feed-forward network! 
         </li>
+        <li> Some models: 
+        <a href = "https://github.com/tensorflow/models">Model Zoo</a>, 
+        <a href="https://github.com/hwalsuklee/tensorflow-generative-model-collections?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=The%20Wild%20Week%20in%20AI">GANs</a>, 
+        <a href="https://github.com/monsta-hd/boltzmann-machines">RBMs</a>
+        </li>        
+        <li><a href="https://github.com/jtoy/awesome-tensorflow">more stuff...</a>
+        </li>        
     </ul>
 </ul>
 
