--- a/resources.html
+++ b/resources.html
@@ -106,6 +106,11 @@ Fundations:
         <a href="http://www.cs.cmu.edu/~ninamf/courses/601sp15/lectures.shtml">Intro to Machine Learning</a>, 
         Tom Mitchell, CMU
     </li>
+    <li>Convex Optimization
+        <a href="https://see.stanford.edu/Course/EE364A">A</a>
+        <a href="https://see.stanford.edu/Course/EE364B">B</a>
+        , Stephen P. Boyd, Stanford
+    </li>
     <li>
         <a href="http://www.mit.edu/~9.520/fall17/">Statistical Learning Theory and Applications</a> 
         [<a href="https://www.youtube.com/watch?v=Q5itLKscYTA&list=PLyGKBDfnk-iCXhuP9W-BQ9q2RkEIA5I5f">lectures</a>], 
