--- a/academicCV.html
+++ b/academicCV.html
@@ -144,7 +144,7 @@ Welton Summer Sophomore Research Apprenticeship Grant
 <div style="padding-left: 4em; text-indent: -4em;">
 
 <p>
-Lu, Q., Cox, C., Rogers, T. T., Lambon Ralph, M., & Takahashi R. (in prep). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
+Lu, Q., Cox, C., Takahashi R., Lambon Ralph, M., & Rogers, T. T. (in prep). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
 </p>
 
 <p>
