--- a/resources.html
+++ b/resources.html
@@ -112,6 +112,10 @@ Fundations:
         , Stephen P. Boyd, Stanford
     </li>
     <li>
+        <a href="https://www.zabaras.com/statisticalcomputing">Bayesian Statistics</a>,
+        Nicholas Zabaras, University of Notre Dame
+    </li>
+    <li>
         <a href="http://www.mit.edu/~9.520/fall17/">Statistical Learning Theory and Applications</a> 
         [<a href="https://www.youtube.com/watch?v=Q5itLKscYTA&list=PLyGKBDfnk-iCXhuP9W-BQ9q2RkEIA5I5f">lectures</a>], 
         Tomaso Poggio, et al., MIT    
@@ -152,7 +156,7 @@ Fundations:
         <a href="https://github.com/muupan/deep-reinforcement-learning-papers">deep RL</a>
     </li>
     <li>Bayesian: 
-        <a href="https://cocosci.berkeley.edu/tom/bayes.html">Bayesian methods</a>,  
+        <a href="https://cocosci.berkeley.edu/tom/bayes.html">Reading list</a>,  
         <a href="http://stat.columbia.edu/~porbanz/npb-tutorial.html">Bayesian Nonparametrics</a>
     </li>
     <li>Other stuff: 
