--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,10 @@ Princeton, NJ 08544
 
 <br><br>
 
-Labs: <br>
-<a href = "http://compmem.princeton.edu/">Princeton Computational Memory Lab</a>  <br>
+Labs: 
+<br>
+<a href = "http://compmem.princeton.edu/">Princeton Computational Memory Lab</a>  
+<br>
 <a href = "https://www.hassonlab.com/">Hasson Lab</a>
 
 <br><br>
