--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 </p></center>
 
 <p>
-Hi, my name is Qihong Lu (吕其鸿). I'm a 1st year PhD student with <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> and <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a> at Princeton. 
+Hi, my name is Qihong Lu (吕其鸿). I'm a 1st year PhD student with 
+<a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> and 
+<a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a> 
+at Princeton. 
 </p>
 
       </section>
