--- a/academicCV.html
+++ b/academicCV.html
@@ -70,7 +70,7 @@ Ph.D. in Psychology, Princeton University
 <br>
 
 B.S. in Mathematics and Psychology, UW-Madison
-<div style="float: right;">2013 ~ May 2017 </div><br/>
+<div style="float: right;">2013 ~ 2017 </div><br/>
 <br><br>
 
 
