--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@ FYI: This page is quite outdated...
 <center>
 <p style="width: 500px;">
 <img src="/myImages/research/pdp_cat_demo.png"></p></center>
-<p> The speed of ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we built a recurrent neural network that captures the behavioral and neural temporal dynamics of visual recognition processes, including the rapid recognition data and several other empirical patterns. These results provide evidence that object recognition is supported by interactive processes in the brain.
+<p> Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as primarily feed-forward (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). However, we show that the behavior of a recurrent neural network is still compatible with the empirical findings. These results provide evidence that object recognition is supported by interactive processes in the brain.
 <br>
 - [
 <a href = "myDocs/cogsci2016_poster.pdf"> CogSci 2016 Poster</a>, 
@@ -84,7 +84,6 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 <br><br><br>
 
 
-
 <h3><p> <strong>2. A reinforcement learning network for "counting"</strong></p></h3>
 
 <center>
@@ -92,9 +91,8 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 <img src="/myImages/research/countModel_envir.png"></p></center>
 
 <p>
-Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps an artificial agent to learn a counting-related task. Our modeling framework is inspired by the Deep-Q network (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>). 
+Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps a DQN-like (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>) agent to learn a counting-related task. 
 
-Currently, I am trying to <a href = "https://github.com/QihongL/mathCognition_RAM"> augment this idea with hard attention</a> (<a href = "http://arxiv.org/abs/1406.6247">Mnih et al., 2014</a>).
 <br>
 - [
 <a href = "myDocs/ncpw16_poster.pdf">NCPW 2016 Poster</a>, 
@@ -127,7 +125,7 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 <img src="/myImages/research/ilassoResults.png"></p></center>
 
 <p>
-We investigated the localization of the neural representations of faces, places, and objects. We developed a novel sparse multi-voxel pattern analysis (MVPA) method, which identifies a subset of brain regions (voxels) that predict the kind of pictures (e.g. face vs. non-face) presented to the participants, given their fMRI data. Besides some classic ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found a bunch of "extra" brain regions that are distributed, signal-carrying and idiosyncratic across subjects. 
+We developed a sparse multivoxel pattern analysis (MVPA) method that identifies task-relevant signal directly from whole-brain fMRI data. For the neural representations of faces, places, and objects, besides some classic ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found many additional brain regions that are spatially distributed and idiosyncratic across subjects. 
 
 <br>
 - [
@@ -165,6 +163,7 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 <br><br><br>
 
 <center><a href="#top">Go to top</a></center>
+
 
 
       </section>
