--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,8 @@
         <br>
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"> <a href="research.html">Research</a></p>
-        <p class="view"> <a href="academicCV.html">CV</a></p>
+        <p class="view"> <a href="teaching.html">Teaching</a></p>
+        <p class="view"> <a href="cv.html">CV</a></p>
 <!--         <p class="view"> <a href="tutorial.html">Tutorials</a></p> -->
         <p class="view">Resources</p>
         <p class="view"> <a href="contact.html">Contact</a></p>
@@ -154,6 +155,9 @@ Fundations:
 
 <h3><p> <strong>Other resources </strong></p> </h3>
 <ul>
+    <li>Cognitive modeling:
+        <a href="http://cseweb.ucsd.edu/~gary/CogSciLiterature.html">classic papers</a>
+    </li>
     <li>Deep learning:
         <a href="https://github.com/dennybritz/deeplearning-papernotes">recent papers</a>,
         <a href="https://github.com/ChristosChristofidis/awesome-deep-learning">useful repos</a>,
@@ -165,6 +169,7 @@ Fundations:
     </li>
     <li>Other stuff:
         <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>,
+        <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>
         <a href="https://sccn.ucsd.edu/wiki/EEGLAB#The_EEGLAB_Tutorial_Outline">The EEGLAB Tutorial</a>,
     </li>
     <li>Blogs:
