--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <p class="view"> Home </p>
         <p class="view"> <a href="research.html">Research</a></p>
-        <p class="view"> <a href="academicCV.html">CV</a></p>
-<!--         <p class="view"> <a href="tutorial.html">Tutorials</a></p> -->
+        <p class="view"> <a href="teaching.html">Teaching</a></p>
+        <p class="view"> <a href="cv.html">CV</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
