--- a/cv.html
+++ b/cv.html
@@ -64,19 +64,13 @@ Here's my <a href="myDocs/CV_QL.pdf">full CV (PDF)</a>
 
 <h3><p> <strong>Education</strong></p> </h3>
 
-<p>
-2017 ~ 
-<span class="tab">
 Ph.D. in Psychology, Princeton University
-</span>
-</p>
+<div style="float: right;">2017 ~ </div><br/>
+<br>
 
-<p>
-2013 ~ 2017 
-<span class="tab">
-B.S. in Mathematics and Psychology, UW-Madison
-</span>
-</p>
+B.S. in Mathematics and Psychology, UW-Madison 
+<div style="float: right;">2013 ~ May 2017 </div><br/>
+<br>
 
 
 <br>
