rm an incomplete item

--- a/research.html
+++ b/research.html
@@ -56,8 +56,8 @@
 FYI: This page is quite outdated...
 
 
-<h3 id="top"><p> <strong>0. Shared representational geometry across neural networks</strong></p> </h3>
-<img src="/myImages/research/Jun-02-2018 00-55-15.gif"></p></center>
+<!-- <h3 id="top"><p> <strong>0. Shared representational geometry across neural networks</strong></p> </h3>
+<img src="/myImages/research/Jun-02-2018 00-55-15.gif"></p></center> -->
 
 
 <h3 id="top"><p> <strong>1. A recurrent neural network for human object recognition</strong></p> </h3>
