re-org files/code/etc

--- a/research.html
+++ b/research.html
@@ -3,25 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-<link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-83024954-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
     <title>Qihong Lu | Research</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
+
+    <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83024954-2', 'auto');
+      ga('send', 'pageview');
+    </script>
 
   </head>
   <body>
@@ -33,20 +29,20 @@
         <br>
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view">Research</p>
-        <p class="view"> <a href="teaching.html">Teaching</a></p>
+        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
         <p class="view"> <a href="cv.html">CV</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
 
         <p class="view">
-        <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qlu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+        <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
+        <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
         </p>
 
         <p class="view">
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+        <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
+        <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
         </p>
 
       </header>
@@ -56,18 +52,22 @@
 FYI: This page is quite outdated...
 
 
-<!-- <h3 id="top"><p> <strong>0. Shared representational geometry across neural networks</strong></p> </h3>
-<img src="/myImages/research/Jun-02-2018 00-55-15.gif"></p></center> -->
+<!-- <h3 id="top"><strong>4. Shared representational geometry across neural networks</strong></h3>
+- [
+<a href = "docs/cogsci2018_poster.pdf"> CogSci 2018 Poster</a>
+] -->
 
 
-<h3 id="top"><p> <strong>1. A recurrent neural network for human object recognition</strong></p> </h3>
+<br><br><br>
+
+<h3 id="top"><strong>3. A recurrent neural network for human object recognition</strong></h3>
 <center>
 <p style="width: 500px;">
-<img src="/myImages/research/pdp_cat_demo.png"></p></center>
+<img src="/imgs/research/pdp_cat_demo.png"></p></center>
 <p> Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as primarily feed-forward (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). However, we show that the behavior of a recurrent neural network is still compatible with the empirical findings. These results provide evidence that object recognition is supported by interactive processes in the brain.
 <br>
 - [
-<a href = "myDocs/cogsci2016_poster.pdf"> CogSci 2016 Poster</a>,
+<a href = "docs/cogsci2016_poster.pdf"> CogSci 2016 Poster</a>,
 <a href = "https://mindmodeling.org/cogsci2016/papers/0508/index.html"> CogSci 2016 Abstract</a>,
 <a href = "https://github.com/QihongL/categorization_PDP"> Code</a>
 ]
@@ -88,19 +88,19 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 <br><br><br>
 
 
-<h3><p> <strong>2. A reinforcement learning network for "counting"</strong></p></h3>
+<h3><strong>2. A reinforcement learning network for "counting"</strong></h3>
 
 <center>
 <p style="width: 450px;">
-<img src="/myImages/research/countModel_envir.png"></p></center>
+<img src="/imgs/research/countModel_envir.png"></p></center>
 
 <p>
 Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps a DQN-like (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>) agent to learn a counting-related task.
 
 <br>
 - [
-<a href = "myDocs/ncpw16_poster.pdf">NCPW 2016 Poster</a>,
-<a href = "myDocs/Lu_McClelland_Teaching_ANN_to_count.pdf">NCPW 2016 Abstract</a>,
+<a href = "docs/ncpw16_poster.pdf">NCPW 2016 Poster</a>,
+<a href = "docs/Lu_McClelland_Teaching_ANN_to_count.pdf">NCPW 2016 Abstract</a>,
 <a href = "https://github.com/QihongL/mathCognition_PDP_RL"> Code </a>
 ]
 </p>
@@ -118,20 +118,20 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 
 
 
-<h3><p> <strong>3. Discover distributed representation with sparse MVPA methods</strong></p></h3>
+<h3><strong>1. Discover distributed representation with sparse MVPA methods</strong></h3>
 </i>
 </p>
 
 <center>
 <p style="width: 450px;">
-<img src="/myImages/research/ilassoResults.png"></p></center>
+<img src="/imgs/research/ilassoResults.png"></p></center>
 
 <p>
 We developed a sparse multivoxel pattern analysis (MVPA) method that identifies task-relevant signal directly from whole-brain fMRI data. For the neural representations of faces, places, and objects, besides some classic ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found many additional brain regions that are spatially distributed and idiosyncratic across subjects.
 
 <br>
 - [
-<a href = "myDocs/cox_lu_rogers_CNS2015.pdf">CNS 2015 Poster </a>
+<a href = "docs/cox_lu_rogers_CNS2015.pdf">CNS 2015 Poster </a>
 ,
 <a href = "https://github.com/crcox/iterativelasso"> Code</a>
 ]
