--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-83024954-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
-
     <title>Qihong Lu | Contact</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
+
+    <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83024954-2', 'auto');
+      ga('send', 'pageview');
+    </script>
 
   </head>
   <body>
@@ -33,20 +29,20 @@
 
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"> <a href="research.html">Research</a></p>
-        <p class="view"> <a href="teaching.html">Teaching</a></p>
+        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
         <p class="view"> <a href="cv.html">CV</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view"> Contact</p>
         <br>
 
         <p class="view">
-        <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qlu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+        <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
+        <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
         </p>
 
         <p class="view">
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+        <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
+        <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
         </p>
 
 
@@ -54,39 +50,46 @@
       <section>
 
 <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact info
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+Contact info
 </h3>
 
-My email: <br>
-qlu [at] princeton.edu <br>
-qihong.lu [at] princeton.edu <br>
-qihong.lu [at] wisc.edu
 
-<br><br>
-
-My office: <br>
-136D, Princeton Neuroscience Institute <br>
-Princeton, NJ 08544
+<br>
+<h3><p> <strong>My emails</strong></p></h3>
+<ul>
+    <li>qlu [at] princeton.edu</li>
+    <li>qihong.lu [at] princeton.edu</li>
+    <li>qihong.lu [at] wisc.edu</li>
+</ul>
 
 
-<br><br>
+<br>
+<h3><p> <strong>My office</strong></p></h3>
+<ul>
+<li>
+    136D, Princeton Neuroscience Institute <br>
+    Princeton, NJ 08544
+</li>
+</ul>
+
+<br>
 
 <!DOCTYPE html>
 <html>
-  <head>
+    <head>
     <style>
-      #map {
-        height: 300px;
-        width: 80%;
-       }
+        #map {
+        height: 350px;
+        width: 90%;
+        }
     </style>
-  </head>
-  <body>
-<!--     <h3>Princeton Neuroscience Institute</h3> -->
-    Princeton Neuroscience Institute:
+    </head>
+    <body>
+    <h4>Princeton Neuroscience Institute</h4>
     <div id="map"></div>
     <script>
-      function initMap() {
+        function initMap() {
         var uluru = {lat: 40.343037, lng: -74.652503};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 17,
@@ -96,22 +99,31 @@ Princeton, NJ 08544
           position: uluru,
           map: map
         });
-      }
+        }
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBikNgQ8AugNxfEuEI31XGGbl-oNrdUdZo&callback=initMap">
     </script>
-  </body>
+    </body>
 </html>
 
+
+<!-- <div class="mapouter"><div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=princeton%20neuroscience%20ins&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{text-align:right;height:400px;width:500px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:500px;}</style></div> -->
+
+
+
+
+
+
       </section>
+
       <footer>
         <p><small>Hosted on GitHub Pages<br>
         Theme by <a href="https://github.com/orderedlist">orderedlist</a>
         </small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <!-- <script src="javascripts/scale.fix.js"></script> -->
 
   </body>
 </html>
