--- a/cv.html
+++ b/cv.html
@@ -3,29 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-83024954-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
-
-
     <title>Qihong Lu | CV</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
 
-  </head>
-  <body>
+    <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83024954-2', 'auto');
+      ga('send', 'pageview');
+    </script>
+
+    </head>
+
+<body>
     <div class="wrapper">
       <header>
         <h1>Qihong Lu</h1>
@@ -34,32 +30,32 @@
         <br>
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"><a href="research.html">Research</a></p>
-        <p class="view"> <a href="teaching.html">Teaching</a></p>
+        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
         <p class="view"> CV</p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
 
         <p class="view">
-        <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qlu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+        <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
+        <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
         </p>
 
         <p class="view">
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+        <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
+        <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
         </p>
 
       </header>
       <section>
-        <h3>
 
+<h3>
 
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+    <span aria-hidden="true" class="octicon octicon-link"></span>
+</a>
 
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-
-
-Here's my <a href="myDocs/CV_QL.pdf">full CV (PDF)</a>
+Here's my <a href="docs/CV_QL.pdf">full CV (PDF)</a>
 </h3>
 
 <h3><p> <strong>Education</strong></p> </h3>
@@ -68,7 +64,7 @@ Ph.D. in Psychology, Princeton University
 <div style="float: right;">2017 ~ </div><br/>
 <br>
 
-B.S. in Mathematics and Psychology, UW-Madison 
+B.S. in Mathematics and Psychology, UW-Madison
 <div style="float: right;">2013 ~ May 2017 </div><br/>
 <br>
 
@@ -96,51 +92,51 @@ PI: Uri Hasson, Princeton University
 <div style="padding-left: 4em; text-indent: -4em;">
 
 <p>
-Lu, Q., Hasson, U., & Norman, K. A. (2018). 
-Modeling hippocampal-cortical dynamics during event processing. 
+Lu, Q., Hasson, U., & Norman, K. A. (2018).
+Modeling hippocampal-cortical dynamics during event processing.
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Yu, J. Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018). 
-Performance optimization is insufficient for building accurate models for neural representation. 
+Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
+Performance optimization is insufficient for building accurate models for neural representation.
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Chen, C. Lu, Q., Beukers, A. Baldassano, C., & Norman, K. A. (2018). 
-Generalized schema learning by neural networks. 
+Chen, C., Lu, Q., Beukers, A. Baldassano, C., & Norman, K. A. (2018).
+Generalized schema learning by neural networks.
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Lu, Q., Ramadge, P., Norman, K. A. & Hasson, U. (2018). 
-Measuring representational similarity across neural networks. 
+Lu, Q., Ramadge, P., Norman, K. A. & Hasson, U. (2018).
+Measuring representational similarity across neural networks.
 Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI.
 </p>
 
 
 <p>
-Lu, Q., & Rogers, T. T. (2016). 
-An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition. 
+Lu, Q., & Rogers, T. T. (2016).
+An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.
 Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
 </p>
 
 <p>
-Lu, Q., & McClelland, J. L. (2016). 
-Teaching a neural network to count: reinforcement learning with social scaffolding'. 
+Lu, Q., & McClelland, J. L. (2016).
+Teaching a neural network to count: reinforcement learning with social scaffolding'.
 Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA.
 </p>
 
 <p>
-Cox, C. R., Lu, Q., & Rogers, T. T. (2015). 
-Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. 
+Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
+Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.
 Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA.
 </p>
 
 <p>
-Cox, C. R., Lu, Q., & Rogers, T. T. (2015). 
-Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. 
+Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
+Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.
 Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
 </p>
 
@@ -160,21 +156,24 @@ McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016). A Parallel
 </p>
 
 <p>
-Wang, T., Lu, Q. & Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese
+Wang, T., Lu, Q., & Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese
 </p>
 
 </div>
 
 
 
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages<br>
-        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-        </small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
+</section>
 
-  </body>
+<footer>
+    <p><small>Hosted on GitHub Pages<br>
+    Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+    </small></p>
+</footer>
+
+</div>
+
+<script src="javascripts/scale.fix.js"></script>
+
+</body>
 </html>
