--- a/index.html
+++ b/index.html
@@ -3,26 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-<!-- <link rel="shortcut icon" href="https://www.cs.wisc.edu/sites/all/themes/cs_subtheme/favicon.ico" type="image/vnd.microsoft.icon" /> -->
-<link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-83024954-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-    <title>Qihong Lu | Princeton University </title>
-
+    <title>Qihong Lu | Princeton University</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
+
+    <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83024954-2', 'auto');
+      ga('send', 'pageview');
+    </script>
 
   </head>
   <body>
@@ -35,20 +30,20 @@
 
         <p class="view"> Home </p>
         <p class="view"> <a href="research.html">Research</a></p>
-        <p class="view"> <a href="teaching.html">Teaching</a></p>
+        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
         <p class="view"> <a href="cv.html">CV</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
 
         <p class="view">
-        <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qlu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+        <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
+        <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
         </p>
 
         <p class="view">
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+        <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
+        <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
         </p>
 
 
@@ -57,21 +52,27 @@
 
 
 
-
-<h3>
+<h2>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal webpage!
-</h3>
+</h2>
 
-<center><p style="width: 500px;">
-<img src="/myImages/myPics/me_slc.png">
-</p></center>
+<center>
+    <p style="width: 500px;"><img src="/imgs/myPics/me_slc.png"></p>
+</center>
 
 <p>
+<h4>
 Hi, my name is Qihong Lu (吕其鸿). I'm a 1st year PhD student with
 <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton.
+</h4>
 </p>
+
+<br>
+<a class="twitter-timeline" data-height="500" data-theme="light" href="https://twitter.com/Qihong_Lu?ref_src=twsrc%5Etfw">
+    Tweets by Qihong_Lu
+</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
       </section>
       <footer>
