--- a/cv.html
+++ b/cv.html
@@ -93,51 +93,62 @@ PI: Uri Hasson, Princeton University
 
 <p>
 Lu, Q., Hasson, U., & Norman, K. A. (2018).
-Modeling hippocampal-cortical dynamics during event processing.
-The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
+<b>Modeling hippocampal-cortical dynamics during event processing.</b>
+The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
+<br>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">paper</a>, poster
 </p>
 
 <p>
 Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
-Performance optimization is insufficient for building accurate models for neural representation.
-The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
+<b>Performance optimization is insufficient for building accurate models for neural representation.</b>
+The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
+<br>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">paper</a>, poster
 </p>
 
 <p>
 Chen, C., Lu, Q., Beukers, A. Baldassano, C., & Norman, K. A. (2018).
-Generalized schema learning by neural networks.
-The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
+<b>Generalized schema learning by neural networks.</b>
+The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
+<br>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">paper</a>, poster
 </p>
 
 <p>
 Lu, Q., Ramadge, P., Norman, K. A. & Hasson, U. (2018).
-Measuring representational similarity across neural networks.
-Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI.
-</p>
+<b>Measuring representational similarity across neural networks.</b>
+Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI. 
+<br>
+<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/cogsci2018_poster.pdf">poster</a>
+</p> 
 
 
 <p>
 Lu, Q., & Rogers, T. T. (2016).
-An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.
-Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
+<b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
+Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA. 
+<br>
+<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/cogsci2016_poster.pdf">poster</a>, 
+<a href = "https://github.com/QihongL/categorization_PDP">code</a>
 </p>
 
 <p>
 Lu, Q., & McClelland, J. L. (2016).
-Teaching a neural network to count: reinforcement learning with social scaffolding'.
-Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA.
+<b>Teaching a neural network to count: reinforcement learning with social scaffolding'.</b>
+Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA. 
+<br>
+<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/ncpw16_poster.pdf">poster</a>, 
+<a href = "https://github.com/QihongL/mathCognition_PDP_RL">code</a>
 </p>
 
 <p>
 Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
-Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.
-Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA.
-</p>
-
-<p>
-Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
-Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.
-Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
+<b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.</b>
+Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA, and the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI. 
+<br>
+<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/cox_lu_rogers_CNS2015.pdf">poster</a>, 
+<a href="https://github.com/crcox/WISC_MVPA">code</a>
 </p>
 
 </div>
@@ -147,16 +158,17 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 <h3><p> <strong>Manuscripts</strong></p></h3>
 <div style="padding-left: 4em; text-indent: -4em;">
 
+
 <p>
-Lu, Q., Cox, C., Takahashi R., Lambon Ralph, M., & Rogers, T. T. (in prep). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
+McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016). 
+<b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
+<br>
+[<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>]
 </p>
 
 <p>
-McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016). A Parallel-Distributed Processing Approach to Mathematical Cognition. [<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>]
-</p>
-
-<p>
-Wang, T., Lu, Q., & Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese
+Wang, T., Lu, Q., & Seidenberg, M.S. (submitted). 
+<b>The role of transitional probability in reading Chinese</b>
 </p>
 
 </div>
