rm research page

--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
 
         <br>
         <p class="view"> <a href="index.html">Home</a></p>
-        <p class="view"><a href="research.html">Research</a></p>
+<!--         <p class="view"><a href="research.html">Research</a></p> -->
         <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
         <p class="view"> CV</p>
         <p class="view"> <a href="resources.html">Resources</a></p>
@@ -108,7 +108,7 @@ The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Chen, C., Lu, Q., Beukers, A. Baldassano, C., & Norman, K. A. (2018).
+Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018).
 <b>Generalized schema learning by neural networks.</b>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
@@ -116,7 +116,7 @@ The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Lu, Q., Ramadge, P., Norman, K. A. & Hasson, U. (2018).
+Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018).
 <b>Measuring representational similarity across neural networks.</b>
 Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI. 
 <br>
