--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <br>
 
         <p class="view"> <a href="index.html">Home</a></p>
-        <p class="view"> <a href="research.html">Research</a></p>
+<!--         <p class="view"> <a href="research.html">Research</a></p> -->
         <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
         <p class="view"> <a href="cv.html">CV</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
