--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br>
 
         <p class="view"> Home </p>
-        <p class="view"> <a href="research.html">Research</a></p>
+<!--         <p class="view"> <a href="research.html">Research</a></p> -->
         <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
         <p class="view"> <a href="cv.html">CV</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
@@ -69,10 +69,23 @@ at Princeton.
 </h4>
 </p>
 
-<br>
+<!-- Ongoing stuff: 
+<ul>
+  <li>I'm TAing the brain decoding course, 
+  <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">ELE/NEU/PSY480</a>, 
+  this fall. Here's the 
+  <a href="https://github.com/NEU480/organization">class repo</a>. 
+  </li>
+  <li>
+  I'm organizing the weekly PDP meeting. Here's the schedule.
+  </li>
+</ul> -->
+
+
+<!-- <br>
 <a class="twitter-timeline" data-height="500" data-theme="light" href="https://twitter.com/Qihong_Lu?ref_src=twsrc%5Etfw">
     Tweets by Qihong_Lu
-</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 
       </section>
       <footer>
