--- a/cv.html
+++ b/cv.html
@@ -70,7 +70,7 @@ B.S. in Mathematics and Psychology, UW-Madison
 
 
 <br>
-<h3><p> <strong>Current Labs</strong>
+<h3><p> <strong>Labs</strong>
 </p>
 </h3>
 
@@ -89,7 +89,7 @@ PI: Uri Hasson, Princeton University
 
 <br>
 <h3><p> <strong>Conference presentations</strong></p></h3>
-<div style="padding-left: 4em; text-indent: -4em;">
+<!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
 
 <p>
 Lu, Q., Hasson, U., & Norman, K. A. (2018).
@@ -135,7 +135,7 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 
 <p>
 Lu, Q., & McClelland, J. L. (2016).
-<b>Teaching a neural network to count: reinforcement learning with social scaffolding'.</b>
+<b>Teaching a neural network to count: reinforcement learning with "social scaffolding".</b>
 Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA. 
 <br>
 <a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/ncpw16_poster.pdf">poster</a>, 
@@ -151,19 +151,19 @@ Poster presented at the 22nd Cognitive Neuroscience Society annual conference, S
 <a href="https://github.com/crcox/WISC_MVPA">code</a>
 </p>
 
-</div>
+<!-- </div> -->
 
 
 <br>
 <h3><p> <strong>Manuscripts</strong></p></h3>
-<div style="padding-left: 4em; text-indent: -4em;">
+<!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
 
 
 <p>
 McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016). 
 <b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
 <br>
-[<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>]
+<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>
 </p>
 
 <p>
@@ -171,7 +171,7 @@ Wang, T., Lu, Q., & Seidenberg, M.S. (submitted).
 <b>The role of transitional probability in reading Chinese</b>
 </p>
 
-</div>
+<!-- </div> -->
 
 
 
