update URLs; upload poster URL placeholder

--- a/cv.html
+++ b/cv.html
@@ -120,7 +120,7 @@ Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018).
 <b>Measuring representational similarity across neural networks.</b>
 Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI. 
 <br>
-<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/cogsci2018_poster.pdf">poster</a>
+<a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
 </p> 
 
 
@@ -129,7 +129,7 @@ Lu, Q., & Rogers, T. T. (2016).
 <b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
 Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA. 
 <br>
-<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/cogsci2016_poster.pdf">poster</a>, 
+<a href="https://qihongl.github.io/docs/cogsci2016_poster.pdf">poster</a>, 
 <a href = "https://github.com/QihongL/categorization_PDP">code</a>
 </p>
 
@@ -138,7 +138,7 @@ Lu, Q., & McClelland, J. L. (2016).
 <b>Teaching a neural network to count: reinforcement learning with "social scaffolding".</b>
 Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA. 
 <br>
-<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/ncpw16_poster.pdf">poster</a>, 
+<a href="https://qihongl.github.io/docs/ncpw16_poster.pdf">poster</a>, 
 <a href = "https://github.com/QihongL/mathCognition_PDP_RL">code</a>
 </p>
 
@@ -147,7 +147,7 @@ Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
 <b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.</b>
 Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA, and the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI. 
 <br>
-<a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/cox_lu_rogers_CNS2015.pdf">poster</a>, 
+<a href="https://qihongl.github.io/docs/cox_lu_rogers_CNS2015.pdf">poster</a>, 
 <a href="https://github.com/crcox/WISC_MVPA">code</a>
 </p>
 
